--- a/index.html
+++ b/index.html
@@ -17,21 +17,28 @@
     <nav id="nav">
       <div class="nav-center">
         <div class="nav-header">
-          <div>Ettiene le Roux</div>
-          <button class="btn" id="nav-btn">bars</button>
+          <div class="nav-name">Ettiene le Roux</div>
+
+          <button
+            class="btn nav-btn-container fas fa-bars"
+            id="nav-btn"
+          ></button>
         </div>
         <ul class="nav-links">
           <li>
-            <a href="index.html">home</a>
+            <a href="./index.html">home</a>
           </li>
           <li>
-            <a href="about.html">about</a>
+            <a href="./index.html#about">about me</a>
           </li>
           <li>
-            <a href="projects.html">projects</a>
+            <a href="./index.html#skills">skills</a>
           </li>
           <li>
-            <a href="contact.html">contact</a>
+            <a href="./index.html#projects">projects</a>
+          </li>
+          <li>
+            <a href="./index.html#contact">contact</a>
           </li>
         </ul>
       </div>
@@ -43,16 +50,19 @@
         <!-- nav-links -->
         <ul class="sidebar-links">
           <li>
-            <a href="index.html">home</a>
+            <a href="./index.html">home</a>
           </li>
           <li>
-            <a href="about.html">about</a>
+            <a href="./index.html#about">about me</a>
           </li>
           <li>
-            <a href="projects.html">projects</a>
+            <a href="./index.html#skills">skills</a>
           </li>
           <li>
-            <a href="contact.html">contact</a>
+            <a href="./index.html#projects">projects</a>
+          </li>
+          <li>
+            <a href="./index.html#contact">contact</a>
           </li>
         </ul>
         <!-- social icons -->
@@ -126,62 +136,73 @@
     </header>
     <!--end of hero-->
     <!--about-->
-    <section class="about-center">
-      <article class="about-info">
-        <div class="about-title"><h3>About me</h3></div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-          eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-          reiciendis possimus rerum omnis recusandae molestias error
-          consequuntur, doloribus inventore reprehenderit officiis. Dolore aut,
-          repellendus eius fugiat numquam cumque.
-        </p>
-      </article>
-      <article class="about-image">
-        <div class="about-image-center">
-          <img class="about-photo" src="./images/hero-img.jpeg" />
-        </div>
-      </article>
+    <section class="about-center" id="about">
+      <article><h2>About me</h2></article>
+      <div>
+        <article class="about-info">
+          <div class="about-title"><h3>Who am I?</h3></div>
+          <p>
+            Hi, my name is Ettiene and i'm a web developer. I enjoy coding web
+            applications with html/css and javascript. I am aspiring to be a
+            full stack developer.
+          </p>
+        </article>
+        <article class="about-image">
+          <div class="about-image-center">
+            <img class="about-photo" src="./images/hero-img.jpeg" />
+          </div>
+        </article>
+      </div>
     </section>
     <!--end of about-->
     <!--skills-->
-    <section class="skills-center">
+    <section class="skills-center" id="skills">
       <article class="skills-info">
         <div class="skills-title"><h3>Skills</h3></div>
         <ul class="skills-list">
           <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
-          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>SASS</li>
+          <li>Responsive Design</li>
+          <li>Node Basics</li>
+          <li>Express</li>
+          <li>MongoDB Basics</li>
+          <li>SQL Basics</li>
+          <li>Git</li>
+          <li>PHP</li>
+          <li>Wordpress</li>
         </ul>
       </article>
     </section>
     <!--end of skills-->
     <!--projects-->
-    <section class="project-center">
-      <article class="project-image">
-        <div class="project-image-center">
-          <img class="project-photo" src="./images/hero-img.jpeg" />
-        </div>
-      </article>
-      <article class="project-info">
-        <div class="project-title"><h3>Projects</h3></div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-          eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-          reiciendis possimus rerum omnis recusandae molestias error
-          consequuntur, doloribus inventore reprehenderit officiis. Dolore aut,
-          repellendus eius fugiat numquam cumque.
-        </p>
-      </article>
+    <section class="project-center" id="projects">
+      <article><h2>Projects</h2></article>
+      <div>
+        <article class="project-image">
+          <div class="project-image-center">
+            <img class="project-photo" src="./images/hero-img.jpeg" />
+          </div>
+        </article>
+        <article class="project-info">
+          <div class="project-title"><h3>Projects</h3></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
+            eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
+            reiciendis possimus rerum omnis recusandae molestias error
+            consequuntur, doloribus inventore reprehenderit officiis. Dolore
+            aut, repellendus eius fugiat numquam cumque.
+          </p>
+        </article>
+      </div>
     </section>
     <!--end of projects-->
     <!--contact-->
-    <section class="contact-center">
+    <section class="contact-center" id="contact">
       <article class="contact-info">
-        <div class="contact-title"><h3>contact</h3></div>
+        <div class="contact-title"><h2>contact</h2></div>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
           eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
