layout, color and links

--- a/index.html
+++ b/index.html
@@ -66,30 +66,18 @@
           </li>
         </ul>
         <!-- social icons -->
-        <ul class="social-icons">
+        <ul class="social-iconss">
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="bi bi-github"></i>
+            <a href="https://github.com/Eddie143code" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.twitter.com" class="social-icon">
+            <a
+              href="https://www.linkedin.com/in/ettiene-joubert-le-roux403/"
+              class="social-icon"
+            >
               <i class="fab fa-linkedin"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-squarespace"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-behance"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com" class="social-icon">
-              <i class="fab fa-instagram"></i>
             </a>
           </li>
         </ul>
@@ -106,12 +94,15 @@
           <a>projects</a>
           <ul class="social-iconss hero-icons">
             <li>
-              <a href="https://www.twitter.com" class="social-icon">
+              <a href="https://github.com/Eddie143code" class="social-icon">
                 <i class="fab fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.twitter.com" class="social-icon">
+              <a
+                href="https://www.linkedin.com/in/ettiene-joubert-le-roux403/"
+                class="social-icon"
+              >
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
@@ -140,16 +131,20 @@
       <article><h2>About me</h2></article>
       <div>
         <article class="about-info">
-          <div class="about-title"><h3>Who am I?</h3></div>
           <p>
-            Hi, my name is Ettiene and i'm a web developer. I enjoy coding web
-            applications with html/css and javascript. I am aspiring to be a
-            full stack developer.
+            <span class="about-span">
+              Hi, my name is <span>Ettiene</span> and i'm a
+              <span>web developer</span>.</span
+            >
+            <br />
+            <br />
+            I enjoy coding web applications with html/css, JavaScript and PHP. I
+            am aspiring to be a full stack developer.
           </p>
         </article>
         <article class="about-image">
           <div class="about-image-center">
-            <img class="about-photo" src="./images/hero-img.jpeg" />
+            <img class="about-photo" src="./images/me.JPG" />
           </div>
         </article>
       </div>
@@ -158,7 +153,7 @@
     <!--skills-->
     <section class="skills-center" id="skills">
       <article class="skills-info">
-        <div class="skills-title"><h3>Skills</h3></div>
+        <div class="skills-title"><h2>Skills</h2></div>
         <ul class="skills-list">
           <li>HTML</li>
           <li>CSS</li>
@@ -183,18 +178,55 @@
       <div>
         <article class="project-image">
           <div class="project-image-center">
-            <img class="project-photo" src="./images/hero-img.jpeg" />
+            <img class="project-photo" src="./images/sneakerzone-image.png" />
           </div>
         </article>
         <article class="project-info">
-          <div class="project-title"><h3>Projects</h3></div>
+          <div class="project-title"><h3>Sneakerzone</h3></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-            eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-            reiciendis possimus rerum omnis recusandae molestias error
-            consequuntur, doloribus inventore reprehenderit officiis. Dolore
-            aut, repellendus eius fugiat numquam cumque.
+            An e-commerce website that sells shoes. The owner can upload
+            products throught the admin screen at sneaker-zone.vercel.app/admin.
           </p>
+          <div class="view-project-container">
+            <a href="https://sneaker-zone.vercel.app/">View Project</a>
+          </div>
+        </article>
+      </div>
+      <div>
+        <article class="project-image">
+          <div class="project-image-center">
+            <img class="project-photo" src="./images/tarantinobox.png" />
+          </div>
+        </article>
+        <article class="project-info">
+          <div class="project-title"><h3>Tarantinobox</h3></div>
+          <p>
+            At this website users can make accounts and write reviews about
+            movies written and directed by the great Quentin Tarantino, or just
+            read reviews written by other users.
+          </p>
+          <div class="view-project-container">
+            <a href="https://tarantino-box.vercel.app/">View Project</a>
+          </div>
+        </article>
+      </div>
+
+      <div>
+        <article class="project-image">
+          <div class="project-image-center">
+            <img class="project-photo" src="./images/weather-app.png" />
+          </div>
+        </article>
+        <article class="project-info">
+          <div class="project-title"><h3>Weather</h3></div>
+          <p>
+            A weather application where you can look up the temperature in every
+            capital city in all the countries in the world. The user creates an
+            account and saves the cities they look up.
+          </p>
+          <div class="view-project-container">
+            <a href="https://weather-app-juqp.onrender.com/">View Project</a>
+          </div>
         </article>
       </div>
     </section>
@@ -202,13 +234,11 @@
     <!--contact-->
     <section class="contact-center" id="contact">
       <article class="contact-info">
-        <div class="contact-title"><h2>contact</h2></div>
+        <div class="contact-title"><h2>Contact</h2></div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-          eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-          reiciendis possimus rerum omnis recusandae molestias error
-          consequuntur, doloribus inventore reprehenderit officiis. Dolore aut,
-          repellendus eius fugiat numquam cumque.
+          If you are looking to contact me, you can send me an email:
+          ettienejoubertleroux@gmail.com or call / whatsapp me at(+27)
+          834441328.
         </p>
       </article>
     </section>
@@ -222,12 +252,15 @@
       <p>Ettiene le Roux || Web Developer</p>
       <ul class="social-iconss">
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a href="https://github.com/Eddie143code" class="social-icon">
             <i class="fab fa-github"></i>
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com" class="social-icon">
+          <a
+            href="https://www.linkedin.com/in/ettiene-joubert-le-roux403/"
+            class="social-icon"
+          >
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
