changed navbar, sidebar and buttons

--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
         <!-- nav-links -->
         <ul class="sidebar-links">
           <li>
-            <a href="./index.html">home</a>
+            <a class="sidebar-btn-link" href="./index.html">home</a>
           </li>
           <li>
-            <a href="./index.html#about">about me</a>
+            <a class="sidebar-btn-link" href="./index.html#about">about me</a>
           </li>
           <li>
-            <a href="./index.html#skills">skills</a>
+            <a class="sidebar-btn-link" href="./index.html#skills">skills</a>
           </li>
           <li>
-            <a href="./index.html#projects">projects</a>
+            <a class="sidebar-btn-link" href="./index.html#projects"
+              >projects</a
+            >
           </li>
           <li>
-            <a href="./index.html#contact">contact</a>
+            <a class="sidebar-btn-link" href="./index.html#contact">contact</a>
           </li>
         </ul>
         <!-- social icons -->
@@ -88,7 +90,7 @@
         <article class="hero-info">
           <h1>Ettiene le Roux</h1>
           <h4>web developer</h4>
-          <a>projects</a>
+          <a href="./index.html#projects">projects</a>
           <ul class="social-iconss hero-icons">
             <li>
               <a href="https://github.com/Eddie143code" class="social-icon">
