Skills: removed php and wordpress. Added typescript

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
+          <li>TypeScript</li>
           <li>React</li>
+          <li>Redux</li>
           <li>SASS</li>
           <li>Responsive Design</li>
           <li>Node Basics</li>
@@ -165,8 +167,6 @@
           <li>MongoDB Basics</li>
           <li>SQL Basics</li>
           <li>Git</li>
-          <li>PHP</li>
-          <li>Wordpress</li>
         </ul>
       </article>
     </section>
