About me: html/css capital letters; removed php

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             >
             <br />
             <br />
-            I enjoy coding web applications with html/css, JavaScript and PHP. I
-            am aspiring to be a full stack developer.
+            I enjoy coding web applications with HTML/CSS, JavaScript and
+            TypeScript. I am aspiring to be a full stack developer.
           </p>
         </article>
         <article class="about-image">
