added currency calculator at projects

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             >
             <br />
             <br />
-            I enjoy coding web applications with HTML/CSS, JavaScript and
-            TypeScript. I am aspiring to be a full stack developer.
+            I enjoy coding web applications with HTML/CSS, JavaScript. I am
+            aspiring to be a full stack developer.
           </p>
         </article>
         <article class="about-image">
@@ -225,6 +225,23 @@
           </p>
           <div class="view-project-container">
             <a href="https://weather-app-juqp.onrender.com/">View Project</a>
+          </div>
+        </article>
+      </div>
+
+      <div>
+        <article class="project-image">
+          <div class="project-image-center">
+            <img class="project-photo" src="./images/currency_calc.png" />
+          </div>
+        </article>
+        <article class="project-info">
+          <div class="project-title"><h3>Currency Calculator</h3></div>
+          <p>Application to see the exchange rate of currencies.</p>
+          <div class="view-project-container">
+            <a href="https://currency-calculator-jcwk.onrender.com/"
+              >View Project</a
+            >
           </div>
         </article>
       </div>
