slight css change

--- a/index.html
+++ b/index.html
@@ -229,14 +229,16 @@
         </article>
       </div>
 
-      <div>
+      <div class="div-100">
         <article class="project-image">
           <div class="project-image-center">
             <img class="project-photo" src="./images/currency_calc.png" />
           </div>
         </article>
         <article class="project-info">
-          <div class="project-title"><h3>Currency Calculator</h3></div>
+          <div class="project-title">
+            <h3 class="cc-title">Currency Calculator</h3>
+          </div>
           <p>Application to see the exchange rate of currencies.</p>
           <div class="view-project-container">
             <a href="https://currency-calculator-jcwk.onrender.com/"
